Update from February 24, 2023

--- a/70120-h/70120-h.htm
+++ b/70120-h/70120-h.htm
@@ -2021,7 +2021,7 @@ The Englishman turned full upon him,
 quite quiet, though the sweat stood upon
 his forehead in white drops.  "I am a
 Tenderfoot&mdash;you laugh at me&mdash;think I'm
-afraid of you. I don't know your ways
+afraid of you.  T don't know your ways
 here, but I've read of them in books.
 There is one thing in common between us
 two.  Will you fight?"
@@ -2032,7 +2032,7 @@ two.  Will you fight?"
 </p>
 
 <p>
-"I don't mean with fists.  Go and
+"I don't, mean with fists.  Go and
 borrow for me a revolver from those
 friends of yours&mdash;you have your own."
 </p>
